--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "react-dom": "~0.14.0"
   },
   "devDependencies": {
-    "babel-core": "~5.6.18",
-    "babel-loader": "~5.1.4",
+    "babel-core": "~6.4.0",
+    "babel-loader": "~6.2.1",
     "babel-plugin-react-transform": "~1.1.0",
-    "css-loader": "~0.23.0",
+    "css-loader": "~0.23.1",
     "eslint": "~1.10.1",
     "eslint-config-rackt": "1.0.0",
     "eslint-plugin-react": "~3.6.3",
@@ -35,10 +35,13 @@
     "node-sass": "~3.4.2",
     "react-transform-hmr": "~1.0.0",
     "sass-loader": "~3.1.2",
-    "style-loader": "~0.12.3",
+    "style-loader": "~0.13.0",
     "url-loader": "~0.5.7",
-    "webpack": "~1.9.11",
+    "webpack": "~1.12.11",
     "webpack-dev-middleware": "~1.2.0",
-    "webpack-hot-middleware": "~2.2.0"
+    "webpack-hot-middleware": "~2.2.0",
+    "babel-preset-es2015": "~6.3.13",
+    "babel-preset-react": "~6.3.13",
+    "es6-promise": "~3.0.2"
   }
 }
